--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "install": "^0.13.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,8 +22,5 @@
   "bugs": {
     "url": "https://github.com/melakusheri/Team-Profile-Generator/issues"
   },
-  "homepage": "https://github.com/melakusheri/Team-Profile-Generator#readme",
-  "dependencies": {
-    "inquirer": "^8.1.2"
-  }
+  "homepage": "https://github.com/melakusheri/Team-Profile-Generator#readme"
 }
