--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "lib": "lib"
   },
   "dependencies": {
-    "install": "^0.13.0"
+    "inquirer": "^8.1.2",
+    "install": "^0.13.0",
+    "jest": "^27.0.6"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
